<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mojiscan.ocr.ui.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_addTranscriptionFragment"
            app:destination="@id/addTranscriptionFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/addTranscriptionFragment"
        android:name="com.mojiscan.ocr.ui.fragment.AddTranscriptionFragment"
        android:label="@string/add_transcription"
        tools:layout="@layout/fragment_add_transcription" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.mojiscan.ocr.ui.fragment.DetailFragment"
        android:label="詳細"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.mojiscan.ocr.ui.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/dataHandlingFragment"
        android:name="com.mojiscan.ocr.ui.fragment.DataHandlingFragment"
        android:label="@string/data_handling"
        tools:layout="@layout/fragment_data_handling" />

    <fragment
        android:id="@+id/termsOfServiceFragment"
        android:name="com.mojiscan.ocr.ui.fragment.TermsOfServiceFragment"
        android:label="@string/terms_of_service"
        tools:layout="@layout/fragment_terms_of_service" />

    <fragment
        android:id="@+id/privacyPolicyFragment"
        android:name="com.mojiscan.ocr.ui.fragment.PrivacyPolicyFragment"
        android:label="@string/privacy_policy"
        tools:layout="@layout/fragment_privacy_policy" />

    <fragment
        android:id="@+id/donationFragment"
        android:name="com.mojiscan.ocr.ui.fragment.DonationFragment"
        android:label="@string/donation_title"
        tools:layout="@layout/fragment_donation" />

</navigation>

